--- a/PetShop_Take2/PetShop_Take2.csproj
+++ b/PetShop_Take2/PetShop_Take2.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Models\Pet.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\PetFoodViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
